<resources>
	<string name="app_name">Free Security Camera</string>
	<string name="cam">Main</string>
	<string name="cam_title">Camera:</string>
	<string name="settings">Settings</string>
	<string name="connected">Wi-Fi network</string>
	<string name="disconnected">Wi-Fi disconnected</string>
	<string name="ip_title">Wi-Fi IP: %s</string>
	<string name="ip_none">NONE</string>
	<string name="port">Port: %d</string>
	<string name="port_title">Port</string>
	<string name="rtsp">RTSP:</string>
	<string name="rtsp_discon">Enable Wi-Fi in mobile phone settings</string>
	<string name="video_resolution">Video resolution</string>
	<string name="frame_rate">Frame rate</string>
	<string name="restart_every_minutes">Restart Every (min)</string>
	<string name="login">Login</string>
	<string name="password">Password</string>
	<string name="lang">Language</string>
	<string name="eng">English</string>
	<string name="rus">Russian</string>
	<string name="compress">h264 compression</string>
	<string name="on">On</string>
	<string name="off">Off</string>
	<string name="main">Main</string>
	<string name="front">Front</string>
    <string name="error">Error</string>
    <string name="perm_error_text">This app cannot work without necessary permissions</string>
    <string name="cancel">Cancel</string>
	<string name="translation">Translation</string>
	<string name="err_port">This app cannot use ports below 1024. The default port 1935 is set</string>
	<string name="save">Save</string>
	<string name="url">"http://www.home-security-camera.com"</string>
	<string name="urls">Use phone as an IP camera</string>
	<string name="copy">Copy</string>
	<string name="send">Send</string>
	<string name="clipboard">Copied to Clipboard</string>
	<string name="Change_cam">For changing camera, stop streaming</string>

</resources>
