<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:background="#FFFFFF"
	android:layout_height="match_parent"
	>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:background="#FFFFFF"
            android:layout_height="match_parent"
            tools:context=".ui.MainActivity"
            android:paddingLeft="16sp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/connected"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/textViewWifi"
                android:drawableLeft="@drawable/ic_wifi_off_24px"
                android:gravity="center_vertical"
                android:drawablePadding="16dp"
                android:textSize="16sp"
                android:layout_marginTop="12dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ip_title"
                app:layout_constraintTop_toBottomOf="@+id/textViewWifi"
                android:id="@+id/textViewWifiStatus"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:textColor="@color/gray_black"
                android:layout_marginTop="24dp"
                />

            <TextView
                android:id="@+id/textViewRtsp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="center_vertical"
                android:text="@string/rtsp"
                android:textColor="@color/gray_black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewWifiStatus" />


            <TextView
                android:id="@+id/textViewRtspStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="Stream started"
                android:layout_marginStart="8dp"
                android:textColor="#F44336"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textViewRtsp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textViewRtsp"
                app:layout_constraintTop_toTopOf="@+id/textViewRtsp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="rtmp://pokpaksp"
                app:layout_constraintTop_toBottomOf="@+id/textViewRtspStatus"
                android:id="@+id/textViewCam2"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:textColor="@color/gray_black"
                />

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="24dp"
				android:text="@string/cam_title"
				app:layout_constraintTop_toBottomOf="@+id/textViewCam2"
				android:id="@+id/textViewCam"
				android:gravity="center_vertical"
				android:textSize="18sp"
				android:textColor="@color/gray_black"
				/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="40dp"
				android:text="@string/main"
				app:layout_constraintTop_toBottomOf="@+id/textViewCam"
				app:layout_constraintLeft_toLeftOf="parent"
				android:id="@+id/textViewMain"
				android:gravity="center_vertical"
				android:textSize="16sp"
				android:textColor="@color/gray_black"
				/>

			<androidx.appcompat.widget.SwitchCompat
				android:layout_width="wrap_content"
				android:layout_height="40dp"
				app:layout_constraintTop_toBottomOf="@+id/textViewCam"
				app:layout_constraintLeft_toRightOf="@+id/textViewMain"
				android:id="@+id/switchCamera"

				android:layout_marginLeft="16dp"
				android:scaleY="1.5"
				android:scaleX="1.5"
				/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="40dp"
				android:text="@string/front"
				app:layout_constraintTop_toBottomOf="@+id/textViewCam"
				app:layout_constraintLeft_toRightOf="@+id/switchCamera"
				android:id="@+id/textViewFront"
				android:gravity="center_vertical"
				android:textSize="16sp"
				android:textColor="@color/gray_black"
				android:layout_marginLeft="16dp"
				/>

            <ImageView
                android:id="@+id/smile"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewCam" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

