<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.MainActivity"
	android:paddingLeft="24dp"
	android:paddingRight="24dp"
	>

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/settings"
		app:layout_constraintTop_toTopOf="parent"
		android:id="@+id/textViewTitle"
		android:textSize="22sp"
		android:textColor="@color/gray_black"
		android:layout_marginTop="24dp"
		/>
	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
		android:paddingTop="12dp"
		android:id="@+id/layoutResolution"
		>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/video_resolution"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			android:id="@+id/textViewResTitle"
			android:textSize="16sp"
			android:textColor="@color/gray_black"
			android:paddingBottom="12dp"
			/>
		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:text="720p"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintLeft_toRightOf="@+id/textViewResTitle"
			android:id="@+id/textViewResolution"
			android:textSize="16sp"
			android:textColor="@color/gray_black"
			android:gravity="right"
			android:paddingRight="24dp"
			android:paddingBottom="12dp"
			/>
		<TextView
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:background="@color/gray_light"
			app:layout_constraintBottom_toBottomOf="parent"
			/>
	</androidx.constraintlayout.widget.ConstraintLayout>
	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintTop_toBottomOf="@+id/layoutResolution"
		android:id="@+id/layoutRate"
		>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/frame_rate"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			android:id="@+id/textViewRateTitle"
			android:textSize="16sp"
			android:textColor="@color/gray_black"
			android:paddingTop="12dp"
			android:paddingBottom="12dp"
			/>
		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/btnDec"
			app:layout_constraintRight_toLeftOf="@+id/textViewRate"
			android:src="@drawable/ic_menu_left_black_36dp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			android:adjustViewBounds="true"
			/>
		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/btnInc"
			android:rotation="180"
			app:layout_constraintRight_toRightOf="parent"
			android:src="@drawable/ic_menu_left_black_36dp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			android:adjustViewBounds="true"
			/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="15"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintRight_toLeftOf="@+id/btnInc"
			app:layout_constraintBottom_toBottomOf="parent"
			android:id="@+id/textViewRate"
			android:textSize="16sp"
			android:textColor="@color/gray_black"
			android:gravity="center"
			android:padding="12dp"
			/>
		<TextView
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:background="@color/gray_light"
			app:layout_constraintBottom_toBottomOf="parent"
			/>
	</androidx.constraintlayout.widget.ConstraintLayout>
	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintTop_toBottomOf="@+id/layoutRate"
		android:paddingTop="12dp"
		android:id="@+id/layoutLogin"
		>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/login"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			android:id="@+id/textViewLoginTitle"
			android:textSize="16sp"
			android:textColor="@color/gray_black"
			android:paddingBottom="12dp"
			/>
		<EditText
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:hint="@string/login"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintLeft_toRightOf="@+id/textViewLoginTitle"
			android:id="@+id/editTextLogin"
			android:textSize="16sp"
			android:textColor="@color/gray_black"
			android:gravity="right|center"
			android:paddingRight="24dp"
			android:paddingBottom="12dp"
			android:background="@android:color/transparent"
			/>
		<TextView
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:background="@color/gray_light"
			app:layout_constraintBottom_toBottomOf="parent"
			/>
	</androidx.constraintlayout.widget.ConstraintLayout>
	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintTop_toBottomOf="@+id/layoutLogin"
		android:paddingTop="12dp"
		android:id="@+id/layoutPassword"
		>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/password"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			android:id="@+id/textViewPasswordTitle"
			android:textSize="16sp"
			android:textColor="@color/gray_black"
			android:paddingBottom="12dp"
			/>
		<EditText
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:hint="@string/password"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintLeft_toRightOf="@+id/textViewPasswordTitle"
			android:id="@+id/editTextPassword"
			android:textSize="16sp"
			android:textColor="@color/gray_black"
			android:gravity="right|center"
			android:paddingRight="24dp"
			android:paddingBottom="12dp"
			android:background="@android:color/transparent"
			/>
		<TextView
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:background="@color/gray_light"
			app:layout_constraintBottom_toBottomOf="parent"
			/>
	</androidx.constraintlayout.widget.ConstraintLayout>
	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintTop_toBottomOf="@+id/layoutPassword"
		android:paddingTop="12dp"
		android:id="@+id/layoutPort"
		>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/port_title"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			android:id="@+id/textViewPortTitle"
			android:textSize="16sp"
			android:textColor="@color/gray_black"
			android:paddingBottom="12dp"
			/>
		<EditText
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:text="1935"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintLeft_toRightOf="@+id/textViewPortTitle"
			android:id="@+id/editTextPort"
			android:textSize="16sp"
			android:textColor="@color/gray_black"
			android:gravity="right|center"
			android:paddingRight="24dp"
			android:paddingBottom="12dp"
			android:background="@android:color/transparent"
			android:inputType="number"
			/>
		<TextView
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:background="@color/gray_light"
			app:layout_constraintBottom_toBottomOf="parent"
			/>
	</androidx.constraintlayout.widget.ConstraintLayout>
	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintTop_toBottomOf="@+id/layoutPort"
		android:paddingTop="12dp"
		android:id="@+id/layoutLang"
		>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/lang"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			android:id="@+id/textViewLangTitle"
			android:textSize="16sp"
			android:textColor="@color/gray_black"
			android:paddingBottom="12dp"
			/>
		<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:text="@string/rus"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintLeft_toRightOf="@+id/textViewLangTitle"
			android:id="@+id/textViewLang"
			android:textSize="16sp"
			android:textColor="@color/gray_black"
			android:gravity="right"
			android:paddingRight="24dp"
			android:paddingBottom="12dp"
			/>
		<TextView
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:background="@color/gray_light"
			app:layout_constraintBottom_toBottomOf="parent"
			/>
	</androidx.constraintlayout.widget.ConstraintLayout>
	<TextView
		android:layout_width="200dp"
		android:layout_height="48dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/layoutLang"
		android:background="@drawable/rounded_rect_rsmall"
		android:text="@string/save"
		android:gravity="center"
		android:textAllCaps="true"
		android:textColor="@color/colorAccent"
		android:textSize="17sp"
		android:id="@+id/textViewSave"
		/>

	<!--androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintTop_toBottomOf="@+id/layoutLang"
		android:paddingTop="16dp"
		android:id="@+id/layoutEncode"
		>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/compress"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			android:id="@+id/textViewEncTitle"
			android:textSize="16sp"
			android:textColor="@color/gray_black"
			/>
		<Switch
			android:layout_width="72dp"
			android:layout_height="wrap_content"
			android:textOff="@string/off"
			android:textOn="@string/on"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			android:id="@+id/switchEncode"
			android:textSize="16sp"
			android:textColor="@color/gray_black"
			android:showText="false"
			android:checked="false"
			android:switchMinWidth="72dp"
			/>
	</androidx.constraintlayout.widget.ConstraintLayout-->

</androidx.constraintlayout.widget.ConstraintLayout>